# BlobBot

./: .gitignore  README.md  pyproject.toml  sample.blobby_config.toml
blobby/: __init__.py  __main__.py  cache_conversation.py  config.py  constants.py  generate_text.py
blobby/openai_completions/: __init__.py  cache_conversation.py  config.py  constants.py  openai_completions.py
sample_configs/: blob.toml  blobby.toml  knellwolf.toml  marv.toml
